log/build_2021-10-22_03-03-59/ar_package/stdout_stderr.log
running egg_info
creating ../../build/ar_package/ar_package.egg-info
writing ../../build/ar_package/ar_package.egg-info/PKG-INFO
writing dependency_links to ../../build/ar_package/ar_package.egg-info/dependency_links.txt
writing entry points to ../../build/ar_package/ar_package.egg-info/entry_points.txt
writing requirements to ../../build/ar_package/ar_package.egg-info/requires.txt
writing top-level names to ../../build/ar_package/ar_package.egg-info/top_level.txt
writing manifest file '../../build/ar_package/ar_package.egg-info/SOURCES.txt'
reading manifest file '../../build/ar_package/ar_package.egg-info/SOURCES.txt'
writing manifest file '../../build/ar_package/ar_package.egg-info/SOURCES.txt'
running build
running build_py
creating /home/sg_user/SG/ros2_test_python/build/ar_package/build
creating /home/sg_user/SG/ros2_test_python/build/ar_package/build/lib
creating /home/sg_user/SG/ros2_test_python/build/ar_package/build/lib/ar_package
copying ar_package/__init__.py -> /home/sg_user/SG/ros2_test_python/build/ar_package/build/lib/ar_package
copying ar_package/ar_node.py -> /home/sg_user/SG/ros2_test_python/build/ar_package/build/lib/ar_package
running install
running install_lib
creating /home/sg_user/SG/ros2_test_python/install/ar_package/lib/python3.8/site-packages/ar_package
copying /home/sg_user/SG/ros2_test_python/build/ar_package/build/lib/ar_package/__init__.py -> /home/sg_user/SG/ros2_test_python/install/ar_package/lib/python3.8/site-packages/ar_package
copying /home/sg_user/SG/ros2_test_python/build/ar_package/build/lib/ar_package/ar_node.py -> /home/sg_user/SG/ros2_test_python/install/ar_package/lib/python3.8/site-packages/ar_package
byte-compiling /home/sg_user/SG/ros2_test_python/install/ar_package/lib/python3.8/site-packages/ar_package/__init__.py to __init__.cpython-38.pyc
byte-compiling /home/sg_user/SG/ros2_test_python/install/ar_package/lib/python3.8/site-packages/ar_package/ar_node.py to ar_node.cpython-38.pyc
  File "/home/sg_user/SG/ros2_test_python/install/ar_package/lib/python3.8/site-packages/ar_package/ar_node.py", line 10
    # 定期的に呼ばれる
    ^
SyntaxError: invalid character in identifier

running install_data
creating /home/sg_user/SG/ros2_test_python/install/ar_package/share/ament_index
creating /home/sg_user/SG/ros2_test_python/install/ar_package/share/ament_index/resource_index
creating /home/sg_user/SG/ros2_test_python/install/ar_package/share/ament_index/resource_index/packages
copying resource/ar_package -> /home/sg_user/SG/ros2_test_python/install/ar_package/share/ament_index/resource_index/packages
copying package.xml -> /home/sg_user/SG/ros2_test_python/install/ar_package/share/ar_package
running install_egg_info
Copying ../../build/ar_package/ar_package.egg-info to /home/sg_user/SG/ros2_test_python/install/ar_package/lib/python3.8/site-packages/ar_package-0.0.0-py3.8.egg-info
running install_scripts
Installing ar_node script to /home/sg_user/SG/ros2_test_python/install/ar_package/lib/ar_package
writing list of installed files to '/home/sg_user/SG/ros2_test_python/build/ar_package/install.log'
